# Capstone.W22.MWT.mwackowski

./: Cargo.toml  README.md  cmds
artifacts/: checksums.txt  checksums_intermediate.txt  cw20_base.wasm  osmo_swap.wasm  osmo_swap_manager.wasm
contracts/cw20-base/: Cargo.toml
contracts/manager/: Cargo.toml
contracts/manager/examples/: schema.rs
contracts/manager/src/: contract.rs  contract_cp.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
contracts/manager/src/schema/: osmo-swap-manager.json
contracts/swap/: Cargo.toml  package-lock.json  package.json
contracts/swap/schema/: osmo-swap.json
contracts/swap/src/: contract.rs  contract_working.rs  error.rs  lib.rs  msg.rs  types.rs
contracts/swap/tests/: helpers.rs  integration_test.rs
node/: 0_swap_only.ts  0_test.ts  1_include_manager.ts  NodeTests.client.ts  NodeTests.message-composer.ts  NodeTests.types.ts  constants.ts  unimplemented.ts
schema/: arithmetic_twap_response.json  arithmetic_twap_to_now_response.json  full_denom_response.json  osmosis_msg.json  osmosis_query.json  pool_state_response.json  spot_price_response.json  swap_response.json
src/: contract.rs  lib.rs
tests/: helpers.rs  integration_tests.rs
unused/: contract2.rs  state2.rs
unused/bindings/: Cargo.toml
unused/bindings-test/: Cargo.toml
