[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

# [profile.release.package.osmo-swap]
# codegen-units = 1
# incremental = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "osmo_swap.wasm",
  "checksums.txt",]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

# use library feature to disable all instantiate/execute/query exports
# library = []

[workspace.dependencies]
itertools = "0.10"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
cw-storage-plus = "1.0.1"
anyhow = "1"
thiserror = "1.0"
cosmwasm-storage = "1.1.2"
cw2 = "1.0.1"
jsonformat = "2.0.0"
cosmwasm-schema = "1.1.3"
cosmwasm-std = {version = "1.1.2", features = ["stargate"]}
cw-utils = "0.16.0"
regex = "1.0"
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.11
"""
