[package]
name = "cw20-base"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true } #{ version = "1.1.0" }
cw-utils = { workspace = true } #"1.0.1"
cw2 = { workspace = true } #{ path = "./../../packages/cw2", version = "1.0.1" }
cw20 = { workspace = true } #{ path = "./../../packages/cw20", version = "1.0.1" }
cw-storage-plus = { workspace = true } #"1.0.1"
cosmwasm-std = { workspace = true } #{ version = "1.1.0" }
schemars = { workspace = true } #"0.8.1"
semver = { workspace = true } #"1"
serde = { workspace = true } #{ version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { workspace = true } #{ version = "1.0.23" }

[dev-dependencies]
cw-multi-test = "0.16.1"
