[package]
name = "osmo-swap"
version = "0.1.0"
authors = ["wladzioo <wackowski.m@gmail.com>"]
edition = "2021"
description = ""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
itertools = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
getrandom = { workspace = true }
cw-storage-plus = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
cosmwasm-storage = { workspace = true }
cw2 = { workspace = true }
jsonformat = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
osmosis-std = {path = "./../../packages/osmosis-std"}

# itertools = "0.10"
# schemars = "0.8"
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# getrandom = { version = "0.2", features = ["js"] }
# cw-storage-plus = "1.0.1"
# anyhow = "1"
# thiserror = "1.0"
# cosmwasm-storage = "1.1.2"
# cw2 = "1.0.1"
# jsonformat = "2.0.0"
# osmosis-std = {path = "./../../packages/osmosis-std"}
# cosmwasm-schema = "1.1.3"
# cosmwasm-std = {version = "1.1.2", features = ["stargate"]}
# osmosis-std-derive = {path = "./../../packages/osmosis-std-derive"}


[dev-dependencies]
cw-multi-test = "0.16.2"